<resources>
    <string name="app_name">HangMan</string>
    <string name="tv_menu_title">Hang the StickMan</string>
    <string name="btn_menu_newgame">New Game</string>
    <string name="btn_menu_continue">Continue</string>
    <string name="btn_menu_about">About</string>

    <string name="title_about">About</string>
    <string name="title_game">Playing Le Game</string>

    <string name="text_welcome">Welcome to hang the stickman, can you guess the word?</string>
    <string name="text_about">Made by Timmy</string>
    <string name="hint_input_letter">Type a letter</string>

    <string name="game_letters_tried">Letters tried: </string>
    <string name="game_win">You Won!!</string>
    <string name="game_lose">You Lost!</string>
    <string name="img_descr_hill">Hill</string>
    <string name="img_descr_hanman_empty">HangThingy Empty</string>
    <string name="img_descr_hanman_head">Head is hanging</string>
    <string name="img_descr_hanman_body">The body also hanging</string>
    <string name="img_descr_hanman_left_arm">Left arm is also hanging</string>
    <string name="img_descr_hanman_right_arm">Right arm is also hanging</string>
    <string name="img_descr_hanman_left_leg">Left leg is also hanging</string>
    <string name="img_descr_hanman_right_leg">Whole man is hanging</string>
    <string name="tv_game_tries_left">Tries Left</string>
    <string name="btn_game_guess">Guess</string>
    <string name="toast_game_input_empty">You must enter a character</string>
    <string name="theme_change">Change Theme</string>
</resources>
